mamoru-central-server/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mamoru-mysql-headless
  namespace: kigawa-net-mamoru-main
spec:
  clusterIP: None
  selector:
    app: mamoru-mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mamoru-mysql
  namespace: kigawa-net-mamoru-main
spec:
  selector:
    app: mamoru-mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mamoru-mysql
  namespace: kigawa-net-mamoru-main
  labels:
    app: mamoru-mysql
spec:
  serviceName: mamoru-mysql-headless
  replicas: 1
  selector:
    matchLabels:
      app: mamoru-mysql
  template:
    metadata:
      labels:
        app: mamoru-mysql
    spec:
      containers:
        - name: mysql
          image: mariadb:11.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-vol
              mountPath: /var/lib/mysql
          startupProbe:
            exec:
              command:
                - mariadb-admin
                - ping
                - -h
                - localhost
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          livenessProbe:
            exec:
              command:
                - mariadb-admin
                - ping
                - -h
                - localhost
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - mariadb-admin
                - ping
                - -h
                - localhost
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
  volumeClaimTemplates:
    - metadata:
        name: mysql-vol
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
