mamoru-central-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mamoru-central-server
  namespace: kigawa-net-mamoru-main
spec:
  selector:
    app: mamoru-central-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
