mamoru-central-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mamoru-central-server-ingress
  namespace: kigawa-net-mamoru-main
spec:
  ingressClassName: haproxy
  rules:
    - host: central.mamoru.kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mamoru-central-server
                port:
                  number: 80
